--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <article class="universal">
         
             <!----- Universal Studios ----->
-            <img src="/images/Universal Studios Japan_Harry Potter.JPG" alt="This is a picture of Diagon Alley, a part of the Wizarding World of Harry Potter at Universal Studios Japan." title="I tripped on the cobblestone here.">
+            <img src="images/Universal Studios Japan.JPG" alt="This is a picture of Diagon Alley, a part of the Wizarding World of Harry Potter at Universal Studios Japan." title="I tripped on the cobblestone here.">
             <h2>Universal Studios Japan</h2>
             <p>Universal Studios Japan brings a plethora of your favorite fictional fantasies to life! From the cretaceous creations of Jurassic Park, the wizarding world of Harry Potter, and the numerous Nintendo attractions, the park has something for anyone and everyone from a childhood decades ago to a childhood happening now. With all that said, there are a LOT of people that visit these parks. If you do decide to go, I would suggest having a plan, having some water, and having a limit on your wallet, so you don’t lose it all at the gift shop.
             </p>
