Rename &  Relink Osaka Castle

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
         <!---- Osaka Castle ---->
         <article class="castle">
-            <img src="/images/Osaka_Castle.JPG" alt="This is a low-angle picture of a curly-haired Filipino teenager in front of the Osaka Castle." title="This is my brother. He wanted me to take this picture.">
+            <img src="/images/OsakaCastle.JPG" alt="This is a low-angle picture of a curly-haired Filipino teenager in front of the Osaka Castle." title="This is my brother. He wanted me to take this picture.">
             <h2>Osaka Castle</h2>
             <p>What was once home to 400,000 inhabitants including the Tokugawa shogunate now sees annual visitors upwards of 2.5 million people including me and my family! In addition to being a living historical monument, the area around offers a great location for strolls and photos. Speaking of thousands of inhabitants and historical monuments, the indoor museum offers quite a few of both, but the latter tends to make up for the crowd somewhat.
             </p>
